# horizon-engine

./: .gitignore  CMakeLists.txt
Core/: CMakeLists.txt
Main/: CMakeLists.txt  main.cpp
cmake/: options.cmake
